--- a/todos/templates/login.html
+++ b/todos/templates/login.html
@@ -1,29 +1,47 @@
 {% extends './base.html' %}
 {% block content %}
+<style>
+    .jumbotron {
+        width: 50%;
+    }
 
+    @media screen and (max-width: 1000px) {
+        .jumbotron {
+            width: 100%;
+        }
+    }
+</style>
 <div class="container" style="display: flex;align-items: center;justify-content: center;margin-top: 150px;">
-    <div class='jumbotron' style='width: 50%;height:330px; padding-top: 30px; background-color: rgba(0,0,0,0.5); color: white;'>
-        
-        <center><div style="margin-bottom: 40px;"><h1>Login</h1></div></center>
+    <div class='jumbotron' style='height:28%; padding-top: 4%; background-color: rgba(0,0,0,0.5); color: white;'>
+
+        <center>
+            <div style="margin-bottom: 6%;">
+                <h1>Login</h1>
+            </div>
+        </center>
 
         <form method='POST' action='http://127.0.0.1:8000/todos/login/'>
             {% csrf_token %}
             <div class="form-group row">
-                <label class='form-label col-sm-2' for="name">Username</label>
+                <label class='col-sm-2 col-form-label' for="name">Username</label>
                 <div class='col-sm-10'>
                     <input type="text" class="form-control" id="name" placeholder='Enter the Username' name="name">
                 </div>
             </div>
 
             <div class="form-group row">
-                <label class='form-label col-sm-2' for="amount">Password</label>
+                <label class='col-sm-2 col-form-label' for="amount">Password</label>
                 <div class='col-sm-10'>
-                    <input type="password" class="form-control" placeholder='Enter the Password' id="password" name="password">
+                    <input type="password" class="form-control" placeholder='Enter the Password' id="password"
+                        name="password">
                 </div>
             </div>
 
             <center><input type="submit" class="btn btn-primary" value='Login'></center>
-            <center><p style="padding-top:15px;margin-bottom: 0px;">Don't have an Account ? <a href="http://127.0.0.1:8000/todos/registerform/">Click Here</a></p></center>
+            <center>
+                <p style="padding-top:15px;margin-bottom: 0px;">Don't have an Account ? <a
+                        href="http://127.0.0.1:8000/todos/registerform/">Click Here</a></p>
+            </center>
         </form>
     </div>
 </div>
