--- a/todos/templates/base.html
+++ b/todos/templates/base.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -65,13 +65,15 @@
     body {
         background-image: url("{% static 'bg.jpg' %}");
         background-size: cover;
-        background-repeat: no-repeat;
+        background-repeat: repeat;
+        position: relative;
+        height: 100%;
+        width: 100%;
     }
-    
 </style>
 
 <body>
-    <div >
+    <div>
         {% block content %}
         {% endblock %}
     </div>
